added local storage function

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         <div>
             <div id="searchContainer">
                 <h2>Search for a City:</h2>
-                <input type="text" placeholder="City" name="cityInput" id="cityInput">
-                <div><button type="submit" id="searchBtn">Search</button></div>
+                <form id="searchForm">
+                    <input type="text" placeholder="City" name="cityInput" id="cityInput">
+                    <div><button type="submit" id="searchBtn">Search</button></div>
+                </form>
             </div>
             <p class="divider">_____________________________</p>
-            <div id="search-history-container" class="row m-0 search-history-container">
+            <div id="searchHistory">
   
             </div>
         </div>
