--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div>
             <div id="current">
-                
+                <div id="icon"><img id="wicon" src="" alt="Weather icon"></div>
             </div>
             <h3>5-Day Forecast:</h3>
             <div id="weatherContainer">
